syntax = "proto3";

package user;

option java_package = "com.service.content_service.grpc";
option java_outer_classname = "UserProto";

message UserRequest{
    string id = 1; // UUID string
}

message UserResponse{
    string id = 1; // UUID string
    string username = 2;
    string email = 3;
}

service UserService{
    rpc GetUserById(UserRequest) returns (UserResponse);
}